fix(swb): adding permission to allow calling Send SSH Public Key and requiring Project ID
This update breaks the previous implementation of Send SSH Public Key API by requiring Project ID is
passed

BREAKING CHANGE: Project ID must be passed in to Send SSH Public Key API
