# solutions/swb-app/src/sshKeys/sendPublicKeyRequest.ts
@@ -7,6 +7,7 @@ import { z } from 'zod';
 // eslint-disable-next-line @rushstack/typedef-var
 export const SendPublicKeyRequestParser = z
   .object({
+    projectId: z.string(),
     environmentId: z.string(),
     userId: z.string()
   })
